# 2024-04-hepix-nix

./: .gitignore  .gitlab-ci.yml  README.md  flake.nix  main.typ  theme.typ
demos/devenv/: README.md  flake.nix  hello-hepix.c  meson.build
demos/docker-package/: README.md  flake.nix  meson.build  production-grade-hello-hepix.cpp
demos/nixos-config/: README.md  configuration.nix  flake.nix
demos/nixos-offline/: README.md  configuration.nix  disk-config.nix  flake.nix
demos/package/: README.md  flake.nix
